repoze.who changes
==================

1.0.8 (2008/12/13)

 - The ``PluggableAuthenticationMiddleware`` constructor accepts
   a ``log_stream`` argument, which is typically a file.  After this
   release, it can also be a PEP 333 ``Logger`` instance; if it is a PEP 333 
   ``Logger`` instance, this logger will be used as the repoze.who logger
   (instead of one being constructed by the middleware, as was previously
   always the case).  When the ``log_stream`` argument is a PEP 333 Logger
   object, the ``log_level`` argument is ignored.

1.0.7 (2008/08/28)

 - ``repoze.who`` and ``repoze.who.plugins`` were not added to the
   ``namespace_packages`` list in setup.py, potentially making 1.0.6 a
   brownbag release, given that making these packages namespace
   packages was the only reason for its release.

1.0.6 (2008/08/28)

 - Make repoze.who and repoze.who.plugins into namespace packages
   mainly so we can allow plugin authors to distribute packages in
   the repoze.who.plugins namespace.

1.0.5 (2008/08/23)


 - Fix auth_tkt plugin to set the same cookies in its ``remember`` 
   method that it does in its ``forget`` method.  Previously,
   logging out and relogging back in to a site that used auth_tkt 
   identifier plugin was slightly dicey and would only work sometimes.

 - The FormPlugin plugin has grown a redirect-on-unauthorized feature.
   Any response from a downstream application that causes a challenge
   and includes a Location header will cause a redirect to the value
   of the Location header.

1.0.4 (2008/08/22)

 - Added a key to the '[general]' config section: ``remote_user_key``.
   If you use this key in the config file, it tells who to 1)
   not perform any authentication if it exists in the environment
   during ingress and 2) to set the key in the environment for
   the downstream app to use as the REMOTE_USER variable.  The
   default is ``REMOTE_USER``.

 - Using unicode user ids in combination with the auth_tkt plugin