@@ -1,6 +1,18 @@
 repoze.who changes
 ==================
 
+Next release
+
+ - The RedirectingFormPlugin now attempts to find a header named
+   ``X-Authentication-Failure-Reason`` among the response headers set
+   by the application when a challenge is issued.  If a value for this
+   header exists (and is non-blank), the value is attached to the
+   redirect URL's query string as the ``reason`` parameter.  This
+   makes it possible for downstream applications to issue a response
+   that initiates a challenge with this header and subsequently
+   display the reason in the login form rendered as a result of the
+   challenge.
+
 1.0.8 (2008/12/13)
 
  - The ``PluggableAuthenticationMiddleware`` constructor accepts
